--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,15 +44,15 @@
                                     <li><a href=" {{ path('list_scores') }} ">Scores et classements</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown {% if (formElt is defined) or (notif is defined) %}active{% endif %}"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vos questions <span class="badge">{{ notif }}</span><span class="caret"></span></a>
+                            {#<li class="dropdown {% if (formElt is defined) or (notif is defined) %}active{% endif %}"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vos questions <span class="badge">{% if notif %}{{ notif }}{% endif %}</span><span class="caret"></span></a>#}
+                            <li class="dropdown {% if (formElt is defined) or (notif is defined) %}active{% endif %}"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vos questions <span class="badge"></span><span class="caret"></span></a>
                                 <ul class="dropdown-menu">
                                     <li><a href=" {{ path('suggest_question') }} ">Proposez des questions !</a></li>
-                                    <li><a href=" {{ path('notifications') }} ">Vos questions <span class="badge">{{ notif }}</span></a></li>
+                                    <li><a href=" {{ path('notifications') }} ">Vos questions <span class="badge"></span></a></li>
                                 </ul>
                             </li>
-                            <li class="{% if settings is defined %}active{% endif %}"><a href=" {{ path('settings_user', { 'id': app.user.id }) }} ">Paramètres</a></li>
-
                         {% endif %}
+                        <li class="{% if settings is defined %}active{% endif %}"><a href=" {{ path('settings_user', { 'id': app.user.id }) }} ">Paramètres</a></li>                        
                     {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -80,7 +80,7 @@
         </div>
 
         <footer>
-            {#<p> © Application ludique pour l'enseignement 2017 - Claire Serra</p>#}
+            <p> © Application ludique pour l'enseignement - 2017 - Claire Serra</p>
         </footer>
 
         {% block javascripts %}
