--- a/web/bundles/GameBundle/main.css
+++ b/web/bundles/GameBundle/main.css
@@ -1,4 +1,14 @@
-
+* {
+    box-sizing: border-box;
+}
+html {
+    height: 100%;
+}
+body {
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 30px;
+}
 /********************************** Plateau du jeu ***********************************/
 
 @keyframes couleur {
@@ -195,4 +205,24 @@ div.infoQuestion div {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.8);
     z-index: 10;    
+}
+
+footer {
+    font-style: italic;
+    background-color: lightgrey;
+    color: dimgrey;
+    text-align: center;
+    font-size: 12px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 10px;
+}
+footer p {
+    margin: 0;
+}
+
+
+@media screen and (max-width: 610px) {
+
 }
