--- a/src/GameBundle/Resources/views/Default/notifications.html.twig
+++ b/src/GameBundle/Resources/views/Default/notifications.html.twig
@@ -40,55 +40,26 @@
           <thead>
             <tr>
               <th>Question</th>
+              <th>Réponses</th>
               <th>Matière</th>
               <th>Sous-matière</th>
-              <th>Auteur</th>        
-              <th>Modération</th>
-              <th>Suppression</th>
+              <th>Difficulté</th>
+              <th>Niveau</th>
             </tr>
           </thead>
           <tbody>      
             {% for validQuestion in validQuestions %}
               <tr>
                 <td>{{ validQuestion.question }} </td>
+                <td>
+                {% for response in validQuestion.answers %}
+                  {{ response.answer }} <br/>
+                {% endfor %}
+                </td>
                 <td>{{ validQuestion.topic.subject.nameSubject }} </td>
                 <td>{{ validQuestion.topic.nameTopic }} </td>
-                <td>
-                  {% if "ROLE_USER" in validQuestion.userCount.roles %}
-                    Famille {{ validQuestion.userCount.username }} 
-                  {% elseif "ROLE_TEACHER" in validQuestion.userCount.roles %}
-                    M. / Mme {{ validQuestion.userCount.username }} 
-                  {% else %}                  
-                    {{ validQuestion.userCount.username }} 
-                  {% endif %}                  
-                </td>
-                <td><a href="{{ path('validate_question', { 'id': validQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
-                <td><a data-toggle="modal" data-target="#modalDeleteValidQuestion{{ validQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
-
-                <!-- Modal -->
-                  <div class="modal fade" id="modalDeleteValidQuestion{{ validQuestion.id }}" tabindex="-1" role="dialog" aria-labelledby="modalDeleteValidQuestionLabel" aria-hidden="true">
-                      <div class="modal-dialog">
-                          <div class="modal-content">
-                              <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                  <h4 class="modal-title" id="modalDeleteValidQuestionLabel">Confirmation requise</h4>
-                              </div>
-                              <div class="modal-body">
-                                  Etes-vous sûr de vouloir supprimer la question ?
-                              </div>
-                              <div class="modal-footer">
-                                  <a href="{{ path('question_delete', { 'id': validQuestion.id }) }}">
-                                      {% if app.user.username == "Visiteur" and is_granted('ROLE_ADMIN') %}
-                                          <button class="btn btn-danger btn-lg disabled">Supprimer</button>
-                                      {% else %}
-                                          <button class="btn btn-danger btn-lg">Supprimer</button>
-                                      {% endif %}
-                                  </a>
-                              </div>
-                          </div><!-- /.modal-content -->
-                      </div><!-- /.modal-dialog -->
-                  </div><!-- /.modal -->
-
+                <td>{{ validQuestion.difficulty }} </td>
+                <td>{{ validQuestion.schoolClass.schoolClass }} </td>
               </tr>
             {% endfor %}
           </tbody>
@@ -107,9 +78,8 @@
                 <th>Question</th>
                 <th>Matière</th>
                 <th>Sous-matière</th>
-                <th>Auteur</th>        
-                <th>Modération</th>
-                <th>Suppression</th>
+                <th>Modifier</th>
+                <th>Supprimer</th>
               </tr>
             </thead>
             <tbody>  
@@ -118,7 +88,6 @@
                   <td>{{ notValidQuestion.question }} </td>
                   <td>{{ notValidQuestion.topic.subject.nameSubject }} </td>
                   <td>{{ notValidQuestion.topic.nameTopic }} </td>
-                  <td>Famille {{ notValidQuestion.userCount.username }} </td>
                   <td><a href="{{ path('validate_question', { 'id': notValidQuestion.id }) }}"><span class="glyphicon glyphicon-wrench"></span></a></td>
                   <td><a data-toggle="modal" data-target="#modalDeleteNotValidQuestion{{ notValidQuestion.id }}"><span class="glyphicon glyphicon-trash"></span></a></td>
 
