--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -20,8 +20,10 @@
 
                 <div class="form-group">
                     {{ form_row(form.topic) }}
-                    Vous souhaitez en créer un nouveau ? <br/>
-                    <a href="{{ path('options_question') }}" class="btn btn-default"><span class="glyphicon glyphicon-hand-right"> Ajouter une catégorie</span></a>
+                    {% if app.user and is_granted('ROLE_TEACHER') %}
+                        Vous souhaitez en créer un nouveau ? <br/>
+                        <a href="{{ path('options_question') }}" class="btn btn-default"><span class="glyphicon glyphicon-hand-right"> Ajouter une catégorie</span></a>
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{ form_row(form.question) }}
