--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -168,7 +168,7 @@
                         <div class="panel-body">
                             <p>Score total : <span>{{ gamer.cumulScore }}</span> points</p>
                             <p>Meilleur score : <span>{{ gamer.bestScore }}</span> points</p>
-                            <p>Nombre de parties gagnées : <span>{{ gamer.gameWonNb }}</span></p>
+                            <p>Nombre de parties gagnées : <span>{{ gamer.gameWonNb }}</span> / <span>{{ gamer.gamePlayedNb }}</span></p>
                             <p>Nombre de bonnes réponses : <span>{{ gamer.rightAnswerNb }}</span></p>
                             <p>Niveau : <span>{{ gamer.level }}</span></p>
                             <p>{{ gamer.id }}</p>
@@ -193,7 +193,7 @@
         
         var pathValidAnswer = "{{ path('valid_answer', { 'answerId': 0, 'gamerId': 0, 'dice': 0, 'score': 0, 'bonus': 0 }) }}";
         
-        var pathStats = "{{ path('change_stats', { 'finalScore': 0, 'bestScore': 0, 'gamerId': 0, 'gameWonNb': 0, 'cumulScore': 0, 'level': 0, 'index': 0 }) }}";
+        var pathStats = "{{ path('change_stats', { 'finalScore': 0, 'bestScore': 0, 'gamerId': 0, 'gameWonNb': 0, 'gamePlayedNb': 0, 'cumulScore': 0, 'level': 0, 'index': 0 }) }}";
         
     </script>
 
