MaJ des stats des joueurs

--- a/src/GameBundle/Resources/views/Game/play.html.twig
+++ b/src/GameBundle/Resources/views/Game/play.html.twig
@@ -193,7 +193,7 @@
         
         var pathValidAnswer = "{{ path('valid_answer', { 'answerId': 0, 'gamerId': 0, 'dice': 0, 'score': 0, 'bonus': 0 }) }}";
         
-        var pathStats = "{{ path('change_stats', { 'finalScore': 0, 'bestScore': 0, 'gamerId': 0, 'gameWonNb': 0, 'gamePlayedNb': 0, 'cumulScore': 0, 'level': 0, 'index': 0 }) }}";
+        var pathStats = "{{ path('change_stats', { 'finalScore': 0, 'gamerId': 0 }) }}";
         
     </script>
 
