--- a/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/select_gamer.html.twig
@@ -36,53 +36,41 @@
       <div class="col-lg-3 col-sm-5 center">
         <h3>{{ title2 }}</h3>
         <div class="chooseSubject">
-          {% for subject in subjects %}
-              <p><label><input type="checkbox" name="subject[]" value="{{ subject.id }}" /> {{ subject.nameSubject }}</label><br/></p>
+          {% for subjectSelected in subjectsSelected %}
+              <p><label><input type="checkbox" name="subject[]" value="{{ subjectSelected.id }}" /> {{ subjectSelected.nameSubject }}</label><br/></p>
+
+              {#Voir les questions :#}
+              {#{% for topic in subject.topics %}
+                {% for question in topic.questions %}
+                  {{ question.schoolClass.schoolClass }} : {{ question.question }} <br/>
+                {% endfor %}
+              {% endfor %}#}
+
           {% endfor %}
         </div>
         <div>
           <a class="checkAllSubjects btn btn-default">Cocher les 4 premiers thèmes</a>
         </div>
-        {% if subjects|length < 4 %}
-          <div><span class="glyphicon glyphicon-time"> Patience, il n'y a pas encore assez de questions pour certains thèmes.</span></div>
+        {% if subjectsSelected|length < 4 %}
+          <div><span class="glyphicon glyphicon-time"></span> Patience, pour certains thèmes, il n'y a pas encore assez de questions pour chaque niveau scolaire.</div>
         {% endif %}
 
       </div>
     </div>
     <div class="alert alert-warning">
-      {% for schoolLevel in schoolLevels %}
-        {% if schoolLevel.schoolClass == 'CP' and schoolLevel.questions|length == 0 %}
-          <p>Attention, il faut au moins une question de niveau CP.</p>
-        {% elseif schoolLevel.schoolClass == 'CP' and schoolLevel.questions|length <= 3 %}
-          <p>Attention, il y a seulement {{ schoolLevel.questions|length }} questions de niveau CP.</p>
-        {% endif %}
-
-        {% if schoolLevel.schoolClass == 'CE1' and schoolLevel.questions|length == 0 %}
-          <p>Attention, il faut au moins une question de niveau CE1.</p>
-        {% elseif schoolLevel.schoolClass == 'CE1' and schoolLevel.questions|length <= 3 %}
-          <p>Attention, il y a seulement {{ schoolLevel.questions|length }} questions de niveau CE1.</p>
-        {% endif %}
-
-        {% if schoolLevel.schoolClass == 'CE2' and schoolLevel.questions|length == 0 %}
-          <p>Attention, il faut au moins une question de niveau CE2.</p>
-        {% elseif schoolLevel.schoolClass == 'CE2' and schoolLevel.questions|length <= 3 %}
-          <p>Attention, il y a seulement {{ schoolLevel.questions|length }} questions de niveau CE2.</p>
-        {% endif %}
-
-        {% if schoolLevel.schoolClass == 'CM1' and schoolLevel.questions|length == 0 %}
-          <p>Attention, il faut au moins une question de niveau CM1.</p>
-        {% elseif schoolLevel.schoolClass == 'CM1' and schoolLevel.questions|length <= 3 %}
-          <p>Attention, il y a seulement {{ schoolLevel.questions|length }} questions de niveau CM1.</p>
-        {% endif %}
-
-        {% if schoolLevel.schoolClass == 'CM2' and schoolLevel.questions|length == 0 %}
-          <p>Attention, il faut au moins une question de niveau CM2.</p>
-        {% elseif schoolLevel.schoolClass == 'CM2' and schoolLevel.questions|length <= 3 %}
-          <p>Attention, il y a seulement {{ schoolLevel.questions|length }} questions de niveau CE1.</p>
+      <h4><strong>Attention</strong></h4>
+      
+      {% for key, subject in subjects %}
+        {% if nbSchoolLevels[key][0].1 == 0 %}
+          <p><strong>{{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
+        {% elseif nbSchoolLevels[key][0].1 < 5 %}
+          <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveau(x) scolaires.</p>
         {% endif %}
       {% endfor %}
-      <p><a href=" {{ path('suggest_question') }} "><button class="btn btn-warning" type="button">N'hésitez pas à en ajouter !</button></a></p>
-      
+
+      <div class="center">  
+        <p><a href=" {{ path('suggest_question') }} "><button class="btn btn-warning" type="button">N'hésitez pas à proposer vos questions !</button></a></p>
+      </div>
     </div>  
       
     <div class="center">
