--- a/src/UserBundle/Resources/views/Session/login.html.twig
+++ b/src/UserBundle/Resources/views/Session/login.html.twig
@@ -5,23 +5,19 @@
 
 {% block body %}
  
-    {# S'il y a une erreur, on l'affiche dans un joli cadre #}
-    {% if error %}
-        <div class="alert alert-danger">{{ error.message }} 
+  {% if error %}
+      <div class="alert alert-danger">
+        {{ error.message }} 
         {{ error.messageKey|trans(error.messageData, 'security') }}
-        </div>
+      </div>
+  {% endif %}
 
-    {% endif %}
-
-
-    <h3>Formulaire de connexion</h3>
-
+  <h3>Formulaire de connexion</h3>
 
   {% if app.user != null %}
   <p>Bonjour {{ app.user.username }}</p>
   {% endif %}
 
-  {# Le formulaire, avec URL de soumission vers la route « login_check » comme on l'a vu #}
   <div class="row">
     <div class="col-lg-offset-2 col-lg-8">
       <div class="well">
