--- a/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
+++ b/src/GameBundle/Resources/views/Admin/moderate_question.html.twig
@@ -23,29 +23,53 @@
 
     <div class="alert alert-danger">
       <h4><strong>Attention</strong></h4>
-      {% for schoolClass in allSchoolClass %}
-        {% if schoolClass.questions|length < 10 %}
-          <p>Il faut au moins 10 questions validées du niveau {{ schoolClass.schoolClass }} pour que les joueurs de ce niveau puissent jouer.</p>
-        {% endif %}
-      {% endfor %}
 
       {% for key, subject in subjects %}
-        {% if nbSchoolLevels[key][0].1 == 0 %}
-          <p><strong>{{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
-        {% else %}
 
-          {% if nbSchoolLevels[key][0].1 == 1 %}
-            <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveau scolaire :
-          {% elseif nbSchoolLevels[key][0].1 < 5 %}
-            <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveaux scolaires :
-          {% endif %}
+        <div class="panel-group" id="accordion">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                  {% if nbSchoolLevels[key][0].1 == 0 %}
+                    <p><strong>{{ subject.nameSubject }}</strong> : il n'y a encore aucune question.</p>
+                  {% else %}
 
-            {% for schoolLevel in schoolLevels[key] %}
-            {{ schoolLevel.schoolClass }}
-            {% endfor %}    
-            </p>
-            
-        {% endif %}
+                    {% if nbSchoolLevels[key][0].1 == 1 %}
+                      <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveau scolaire :
+                    {% elseif nbSchoolLevels[key][0].1 < 5 %}
+                      <p><strong>{{ subject.nameSubject }}</strong> : les questions ne concernent seulement que {{ nbSchoolLevels[key][0].1 }} niveaux scolaires :
+                    {% endif %}
+
+                      {% for schoolLevel in schoolLevels[key] %}
+                      {{ schoolLevel.schoolClass }}
+                      {% endfor %}    
+                      </p>
+                      
+                  {% endif %}
+                </a>
+              </h4>
+            </div>
+            <div id="collapse1" class="panel-collapse collapse">
+              <div class="panel-body">
+                {% for nbQuestion in nbQuestions[key] %}
+                  {% if loop.index0 == 0 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CP.</p>
+                  {% elseif loop.index0 == 1 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CE1.</p>
+                  {% elseif loop.index0 == 2 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CE2.</p>
+                  {% elseif loop.index0 == 3 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CM1.</p>
+                  {% elseif loop.index0 == 4 %}
+                  <p>Il y a {{ nbQuestion[0].1 }} question(s) de niveau CM2.</p>
+                  {% endif %}
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+          
       {% endfor %}
     </div>
     
